bad/assign_field_class_of_field_int.example_compiler_output
ERROR
[1mbad/assign_field_class_of_field_int.lat:12:16: [1;31merror: [0;1massigning to `Y` from incompatible type `int`[m
	(new D).c.fld = 42;
	              [1;32m^[m
